<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Metrodroid</string>
    <string name="copyright">Copyright © 2015 – 2022 Michael Farrell</string>
    <string name="license">Licences</string>
    <string name="title_activity_license">Open source licences</string>
    <string name="directions">Tap a card.</string>
    <string name="reading_card">Reading card…</string>
    <string name="dont_move">Do not move card</string>
    <string name="advanced_info">Advanced info</string>
    <string name="delete_card">Delete card</string>
    <string name="unknown_card">Unknown card</string>
    <string name="locked_mfc_card">Locked MIFARE Classic card</string>
    <string name="locked_mfu_card">Locked MIFARE Ultralight card</string>
    <string name="locked_mfd_card">Locked MIFARE DESFire card</string>
    <string name="hw_detail">Manufacturing info</string>
    <string name="data">Raw Data</string>
    <string name="copy_xml">Copy</string>
    <string name="share_xml">Share</string>
    <string name="save_xml">Save to File</string>
    <string name="history">History</string>
    <string name="no_trip_data">No trips found. Has this card been used?</string>
    <string name="import_xml">Import</string>
    <string name="import_clipboard">Paste from clipboard</string>
    <string name="import_file">Import from file</string>
    <string name="export">Export</string>
    <string name="export_filename">Export filename</string>
    <string name="export_all">Export all</string>
    <string name="about">About</string>
    <string name="preferences">Preferences</string>
    <string name="balance_speech">Balance <xliff:g id="balance" example="$13.37">%s</xliff:g></string>
    <string name="loading">Loading…</string>
    <string name="scanned_at_format">Scanned at %1$s on %2$s</string>
    <string name="supported_cards">Supported cards</string>
    <string name="transaction_counter">Transaction counter</string>
    <string name="fully_locked_desc">
        No part of this card is freely readable without a key and currently this format has no practical vulnerabilities.\n\n
        Your card is not supported by Metrodroid and it is unlikely it will ever be, unless the key for it is deciphered.\n\n
        Please lobby the card issuer to allow open data access on issued cards. It is safe to permit open, read-only access to data with modern smartcard technology. Some agencies even provide open documentation about the data format!
    </string>
    <string name="fully_locked_desc_unlockable">No part of this card is freely readable without a key. You have no valid keys installed for it.
\n
\nThe card will work once keys are installed for it. These are generally different for each card. More info about acquiring and installing keys can be found in the documentation.
\n
\nPlease lobby the card issuer to allow open data access on issued cards. It is safe to permit open, read-only access to data with modern smartcard technology. Some agencies even provide open documentation about the data format!</string>
    <string name="fully_locked_title">Fully locked card.</string>
    <string name="nfc_off_error">NFC off</string>
    <string name="turn_on_nfc">Please enable NFC to read card info.</string>
    <string name="nfc_settings">NFC settings</string>
    <string name="machine_id_format">Machine ID %s</string>
    <string name="machine_id">Machine ID</string>
    <string name="last_refill">Last refill</string>
    <string name="unknown_card_header">Unsupported card format</string>
    <string name="unknown_card_description">This card is not yet supported by Metrodroid. Only raw data can be displayed.</string>
    <string name="unknown_more_info">More info</string>
    <string name="unknown_more_info_desc">Tap for more info on Metrodroid support for this card.</string>
    <string name="lawyercats">Metrodroid and its authors are not associated with any public transit agency.</string>
    <string name="scanned_cards">History</string>
    <string name="no_scanned_cards">You have not scanned any cards.</string>
    <string name="block_title_format">Block: %s</string>
    <string name="block_title_format_unauthorized">Block: %s (unauthorized)</string>
    <string name="application_title_format">Application: %s</string>
    <string name="mfc_aid_title_format">MIFARE Classic AID: %1$s #%2$d</string>
    <string name="keys_required">Encryption keys are required to read this card.</string>
    <string name="load_keys">Load Keys</string>
    <string name="keys">Keys</string>
    <string name="general">General</string>
    <string name="launch_from_background">Launch from background</string>
    <string name="visit_website">Visit Website</string>
    <string name="map_tiles_url">Map tiles URL</string>
    <string name="map_tiles_url_summary">Use a custom tile server for embedded maps, using Leaflet TileLayer syntax.</string>
    <string name="map_tiles_subdomains">Map tile subdomains</string>
    <string name="map_tiles_subdomains_summary">If using {s} in map URLs, a comma separated list of subdomains, or single-character list of subdomains.</string>
    <string name="map_tiles_help">View Leaflet TileLayer documentation</string>
    <string name="map_tiles_help_summary">For help on using map tile URLs, see Leaflet\'s online documentation (only available in English).</string>
    <string name="mifare_classic">MIFARE Classic</string>
    <string name="auth_retries">Authentication retries</string>
    <string name="auth_retries_summary">Number of times to attempt authentication for each sector</string>
    <string name="mfc_fallback_desc">Some agencies have no identifying magic on their card. To read them, you must select an agency explicitly.</string>
    <string name="mfc_fallback">Fallback reader</string>
    <string name="pref_hide_unsupported_ribbon">Hide ‘not supported’ ribbon</string>
    <string name="pref_hide_unsupported_ribbon_desc_off">Cards which cannot be read by this device will have a red ‘not supported’ warning displayed over its artwork</string>
    <string name="pref_hide_unsupported_ribbon_desc_on">Unsupported cards will not have anything covering their artwork</string>
    <string name="obfuscation_title">Obfuscation</string>
    <string name="obfuscation_card_numbers">Hide card numbers</string>
    <string name="obfuscation_card_numbers_desc">Don\'t show card numbers anywhere</string>
    <string name="obfuscation_balance">Obfuscate balance</string>
    <string name="obfuscation_balance_desc">Change the balance shown by a random amount</string>
    <string name="obfuscation_dates">Obfuscate dates</string>
    <string name="obfuscation_dates_desc">Show trip, subscription, expiry and scan dates as different, random days</string>
    <string name="obfuscation_times">Obfuscate times</string>
    <string name="obfuscation_times_desc">Fuzz and reduce resolution of timestamps on trips, subscriptions, and scans</string>
    <string name="obfuscation_fares">Obfuscate fares</string>
    <string name="obfuscation_fares_desc">Change fares shown by a random amount</string>
    <string name="accessibility">Accessibility</string>
    <string name="speak_balance">Speak balance aloud</string>
    <string name="speak_balance_summary">When you scan a card, the balance will be automatically read aloud. This works even when a screen reader is not running.</string>
    <string name="localise_places">Add language hints to place names</string>
    <string name="localise_places_desc">Adds language hints (LocaleSpan) to place names, such as station, stop, line and route names. This alters the pronunciation used by screen readers and other accessibility software.</string>
    <string name="localise_places_longdesc_button">About language hints…</string>
    <string name="localise_places_longdesc_title">About language hints</string>
    <string name="localise_places_longdesc">Text-to-speech voices normally only work well for one language.\n\nLocaleSpan hints are used to mark text as being in a different language. When applied to a station, stop, line or route name, a screen reader that supports these hints will pronounce the name using synthesized voices from the place\'s native language, rather than the language you have configured Android to use.\n\nEnabling this option generally improves the pronunciation of foreign place names that are not internationally renowned, but you might find it more difficult to understand.\n\nThis does not normally change the on-screen display of place names, but some devices may use a different font.\n\nThis requires accessibility software that supports the LocaleSpan API (such as Google TalkBack), and that you have appropriate voices installed.</string>
    <string name="lang_override">Application language</string>
    <string name="lang_override_desc">Change the application language. Needs application restart to apply</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_desc">Choose look and feel</string>
    <string name="pref_show_local_and_english_title">Show both local and English station names</string>
    <string name="pref_show_local_and_english_desc">Shows both local and English names regardless of locale, using the most appropriate variant when off.</string>
    <string name="convert_timezones">Convert time zones</string>
    <string name="convert_timezones_summary_off">Trip times will be shown in the transit agency\'s local time zone.</string>
    <string name="convert_timezones_summary_on">Trip times will be converted to your current time zone.</string>
    <string name="pref_show_raw_station_ids">Show raw station &amp; route IDs</string>
    <string name="pref_show_raw_station_ids_desc_on">Station and route IDs are shown in addition to their names</string>
    <string name="pref_show_raw_station_ids_desc_off">Station and route IDs are hidden unless unknown</string>
    <string name="station_database">Station database</string>
    <string name="advanced_options">Advanced options</string>
    <string name="developer_options">Developer options</string>
    <string name="developer_options_desc">Use of station databases, obfuscation modes…</string>
    <string name="nfc">Near Field Communication</string>
    <string name="nfc_options_desc">Fallback reader for MIFARE Classic, physical card interface settings…</string>
    <string name="mifare_desfire">MIFARE DESFire</string>
    <string name="card_media_felica">FeliCa</string>
    <string name="felica_first_system_pref">Only read first system</string>
    <string name="felica_first_system_pref_summary_off">Metrodroid will read all systems on FeliCa cards. This is the default.</string>
    <string name="felica_first_system_pref_summary_on">Metrodroid will read only the first system on FeliCa cards. This simulates a workaround for a bug in iOS. Reads of multi-system FeliCa cards will be incomplete!</string>
    <string name="leap_retrieve_keys">Retrieve keys for Leap cards</string>
    <string name="leap_retrieve_keys_longdesc">Shares your card details with Transport for Ireland, in order to respond to the Leap card\'s authentication challenge. TFI will know you used Metrodroid on this card. The card can not be read without this key.</string>
    <string name="maps">Maps</string>
    <string name="raw_level">Raw level</string>
    <string name="raw_level_desc">How much raw info to show in parsed data. Not all parsers support this option</string>
    <string name="hardware">Hardware</string>
    <string name="android_nfc_settings">Android NFC settings</string>
    <string name="show_debug_spans">Show debug colour for locale spans</string>
    <string name="show_debug_spans_desc">Highlight default language in green, English in yellow and local language in
        blue
    </string>
    <string name="app_logo_description">Metrodroid logo</string>
</resources>