<?xml version="1.0" encoding="utf-8"?>

<!--
  main_menu.xml

  Copyright (C) 2011 Eric Butler

  Authors:
  Eric Butler <eric@codebutler.com>

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/prefs"
        android:title="@string/preferences"
        android:icon="@android:drawable/ic_menu_preferences" />
    <item
        android:id="@+id/keys"
        android:title="@string/keys" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details" />
    <item
        android:id="@+id/scanned_cards"
        android:title="@string/scanned_cards"
        android:showAsAction="ifRoom"
        android:visible="?attr/MainMenuItemsVisibility"
        android:icon="@drawable/ic_history_grey_24dp" />
    <item
        android:id="@+id/supported_cards"
        android:title="@string/supported_cards"
        android:showAsAction="ifRoom"
        android:visible="?attr/MainMenuItemsVisibility"
        android:icon="@drawable/ic_help_outline_grey_24dp" />
</menu>