<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.AboutActivity">

    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:contentDescription="@string/app_logo_description"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/lblCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:text="@string/copyright"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lblDebugText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Space
            android:layout_gravity="fill_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/lblLawyers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/lawyercats"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onWebsiteClick"
                android:text="@string/visit_website"
                style="?attr/ButtonStyle" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLicenseClick"
                android:text="@string/license"
                style="?attr/ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
