<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UnauthorizedCardFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fully_locked_title"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView2" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/unauthorized_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:background="#FF4444"
        android:layout_gravity="left|bottom"
        android:visibility="gone">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/keys_required"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
        <Button
            android:id="@+id/load_keys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:text="@string/load_keys" />
    </LinearLayout>
</FrameLayout>
